--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
 
             <div class="Html">
                 <div class="img">
-                    <img src="c.png" alt="">
+                    <img src="java.png" alt="">
                 </div>
                 <p>I know how to use Java to write programs and create applications. I understand important concepts like classes and objects, which help me write clean and organized code.</p>
             </div>
 
             <div class="Html">
                 <div class="img">
-                    <img src="java.png" alt="">
+                    <img src="C.png" alt="">
                 </div>
                 <p> I know how to write programs in C to solve different problems. I understand how to manage memory and use basic tools like data structures to make my programs work better and faster.</p>
             </div>
